<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Android NodeJS REPL</string>
    <string name="drawer_open">Menu opened</string>
    <string name="drawer_close">Menu closed</string>
    <string name="action_settings">Settings</string>

    <!-- menu -->
    <string name="run">run</string>
    <string name="save">save</string>
    <string name="share">share</string><!-- replace with icon, drop down -->
    <string name="clear">clear</string>
    <string name="NPM">NPM</string><!-- drop down -->
    <string name="npm_ls">ls</string>
    <string name="npm_install">install</string>
    <string name="npm_update">update</string>

    <!-- prefs -->
    <string name="sensor_settings">Sensors</string>
</resources>
